--- a/Manifests/base/app-deploy.yaml
+++ b/Manifests/base/app-deploy.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: StudentCoursesRestAPI
+  namespace: dev-namespace
 spec:
   minReadySeconds: 5
   replicas: 3
@@ -38,16 +39,4 @@ spec:
 
 
 
----
-apiVersion: v1 
-kind: Service
-metadata:
-  name: app-svc
-spec: 
-  type: LoadBalancer
-  ports:
-    - port: 8080
-      protocol: TCP
-      name: app-port
-  selector:
-    app: StudentCoursesRestAPI                                   
+                                   
