--- a/Manifests/base/kustomization.yaml
+++ b/Manifests/base/kustomization.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - app.yaml
-  - mysql-db.yaml
-  - pvc.yaml
-  - storageclass.yaml
+  - app-deploy.yaml
+  - app.svc.yaml
+  
+  
