--- a/Manifests/overlay/prod/kustomization.yaml
+++ b/Manifests/overlay/prod/kustomization.yaml
@@ -1,8 +1,8 @@
 resources:
 - ../../base
 images:
-- name: Manifests
+- name: 097018296722.dkr.ecr.us-east-1.amazonaws.com/aws-ecr:prod-18
   newName: 097018296722.dkr.ecr.us-east-1.amazonaws.com/aws-ecr
-  newTag: prod-v1.0
+  newTag: prod-version1.0
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
