--- a/Manifests/overlay/uat/kustomization.yaml
+++ b/Manifests/overlay/uat/kustomization.yaml
@@ -1,7 +1,7 @@
 resources:
 - ../../base
 images:
-- name: Manifests
+- name: 097018296722.dkr.ecr.us-east-1.amazonaws.com/aws-ecr:uat-18
   newName: 097018296722.dkr.ecr.us-east-1.amazonaws.com/aws-ecr
   newTag: uat-1.0
 apiVersion: kustomize.config.k8s.io/v1beta1
