--- a/Manifests/base/app-deploy.yaml
+++ b/Manifests/base/app-deploy.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: StudentCoursesRestAPI
+  name: student-coursesrest-api
   namespace: dev-namespace
 spec:
   minReadySeconds: 5
@@ -14,19 +14,20 @@ spec:
       maxUnavailable: 25%
   selector:
     matchLabels:
-      app: StudentCoursesRestAPI
+      app: studentcourses
       tech: python 
       ver: "1.0"    
   template: 
     metadata: 
-      name: StudentCoursesRestAPI 
+      name: student-courses-rest-api 
       labels:
-        app: StudentCoursesRestAPI
+        app: studentcourses
         tech: python 
         ver: "1.0"
     spec:
       containers:
-        - image: 097018296722.dkr.ecr.us-east-1.amazonaws.com/aws-ecr:dev-18
+        - image: 097018296722.dkr.ecr.us-east-1.amazonaws.com/aws-ecr:dev-test-39
+          name: 
           ports:
             - containerPort: 8080
               protocol: TCP  
