--- a/Manifests/databse/mysql-db.yaml
+++ b/Manifests/databse/mysql-db.yaml
@@ -24,7 +24,8 @@ spec:
     spec:
       volumes:
         - persistentVolumeClaim:
-            claimName: mysql-pvc 
+            claimName: mysql-pvc
+          name: 'mysql-vol'  
       containers:
         - image: mysql:5.7.41
           name: mysql
