--- a/Manifests/base/app-deploy.yaml
+++ b/Manifests/base/app-deploy.yaml
@@ -26,7 +26,7 @@ spec:
         ver: "1.0"
     spec:
       containers:
-        - image: 097018296722.dkr.ecr.us-east-1.amazonaws.com/aws-ecr:dev-test-39
+        - image: tarunkumarpendem/studentcourses:feb_21_2k23_1pm
           name: studentcourses
           ports:
             - containerPort: 8080
@@ -36,7 +36,13 @@ spec:
               value: mysql-deployment
           readinessProbe:
             timeoutSeconds: 5
-            periodSeconds: 5 
+            periodSeconds: 5
+            initialDelaySeconds: 1
+            successThreshold: 1
+            failureThreshold: 1
+            tcpSocket:
+              host:
+              port: 8080 
 
 
 
